--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             width="25px" class="me-2">BUY NOW</button>
                 </div>
                 <div class="col-5 ">
-                    <img src="image/green.png" alt="" , width="100%">
+                    <img src="Image/green.png" alt="" , width="100%">
                 </div>
             </div>
         </section>
