--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
     <main>
         <section class="container" style="background-color: #FFFBF0;">
             <div class="row flex-lg-row flex-column ">
-                <div class="col-md-5 col-12  mt-5">
+                <div class="col-md-5 col-12 mt-5">
                     <h1>BE THE PENGUINS</h1>
                     <h1>OF WINTER</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab nostrum quibusdam accusantium?</p>
                     <button class="btn btn-coustom"><img src="logo/shopping-cart 1.png" alt="" height="25px"
                             width="25px" class="me-2">BUY NOW</button>
                 </div>
-                <div class="col-5 ">
+                <div class="col-12 col-md-5 ">
                     <img src="Image/green.png" alt="" , width="100%">
                 </div>
             </div>
