--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
                         <div class="col">
                             <div class="card shadow p-3 mb-5 bg-white b-radious mb-3 border-0" style="max-width: 500px; ">
                                 <div class="row g-0">
-                                    <div class="col-md-4">
-                                        <img src="logo/image 12.png" alt="..." width="70">
+                                    <div class="col-md-4 d-flex justify-content-center">
+                                        <img src="logo/image 12.png" alt="..." width="100">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -202,10 +202,10 @@
                         <div class="col">
                             <div class="card shadow p-3 mb-5 bg-white b-radious mb-3 border-0" style="max-width: 500px;">
                                 <div class="row g-0">
-                                    <div class="col-md-4">
-                                        <img src="logo/image 13.png" alt="..." width="70">
+                                    <div class="col-md-4 d-flex justify-content-center">
+                                        <img src="logo/image 13.png" alt="..." width="100">
                                     </div>
-                                    <div class="col-md-8">
+                                    <div class="col-md-8 ">
                                         <div class="card-body">
                                             <h5 class="card-title">Card title</h5>
                                             <p class="card-text">Lorem ipsum dolor sit amet</p>
@@ -216,10 +216,10 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card shadow p-3 mb-5 bg-white b-radious mb-3 border-0" style="max-width: 500px; ">
-                                <div class="row g-0">
-                                    <div class="col-md-4 ">
-                                        <img src="logo/image 14.png" alt="..." width="70">
+                            <div class="card shadow p-3 mb-5 bg-white b-radious mb-3 border-0 " style="max-width: 500px; ">
+                                <div class="row  g-0">
+                                    <div class="col-md-4 d-flex justify-content-center">
+                                        <img src="logo/image 14.png" alt="..." width="100">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
