--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="container-fluid m-2">
                 <a class="navbar-brand " href="#">
                     <img src="logo/icon.png" alt="" width="38" height="30" class="d-inline-block align-center rounded">
-                    <span class="text-danger">Penguin </span> Fashion
+                    <span class="txt-highlight-2">Penguin </span> Fashion
                 </a>
                 <div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -53,33 +53,50 @@
         <section class="container" style="background-color: #FFFBF0;">
             <div class="row flex-lg-row flex-column ">
                 <div class="col-md-5 col-12 mt-5">
-                    <h1>BE THE PENGUINS</h1>
-                    <h1>OF WINTER</h1>
+                    <h1 class="txt-highlight  fs-1 fw-bold">BE THE PENGUINS</h1>
+                    <h1 class=" txt-highlight-3 fw-bold">OF WINTER</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab nostrum quibusdam accusantium?</p>
                     <button class="btn btn-coustom"><img src="logo/shopping-cart 1.png" alt="" height="25px"
                             width="25px" class="me-2">BUY NOW</button>
                 </div>
                 <div class="col-12 col-md-5 ">
-                    <img src="Image/green.png" alt="" , width="100%">
+                    <img src="image/green.png" alt="" , width="100%">
                 </div>
             </div>
         </section>
         <!-- first section start -->
         <section class="container mt-5">
-            <h1>WOMEN JACKET</h1>
+            <h1 class="txt-highlight-3">WOMEN JACKET</h1>
             <div class="row mt-5">
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-white .b-radious" style="width: 18rem;">
                         <div class="bg-light rounded">
-                            <img src="Image/SeekPng 1.png" class="card-img-top" alt="...">
+                            <img src="image/pic1.png" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title fw-bold">Yellow Coat Jacket</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur.</p>
                         </div>
 
                         <div class="card-body d-flex justify-content-between">
-                            <h2 class="card-link">$200</h2>
+                            <h2 class="card-link txt-highlight">$200</h2>
+                            <button class="btn btn-coustom "><img src="logo/shopping-cart 1.png" alt="" height="25px"
+                                    width="25px" class="me-2">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+                        <div class="bg-light rounded">
+                            <img src="Image/pic2.png" class="card-img-top" alt="..." height="285px" width="40">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold">Ladies Jacket </h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>
+
+                        <div class="card-body d-flex justify-content-between">
+                            <h2 class="card-link txt-highlight">$200</h2>
                             <button class="btn btn-coustom"><img src="logo/shopping-cart 1.png" alt="" height="25px"
                                     width="25px" class="me-2">BUY NOW</button>
                         </div>
@@ -88,32 +105,15 @@
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
                         <div class="bg-light rounded">
-                            <img src="Image/SeekPng 1.png" class="card-img-top" alt="...">
+                            <img src="Image/pic3.png" class="card-img-top" alt="..." height="285" width="60">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title fw-bold">Woman Leather Jacket </h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur.</p>
                         </div>
 
                         <div class="card-body d-flex justify-content-between">
-                            <h2 class="card-link">$200</h2>
-                            <button class="btn btn-coustom"><img src="logo/shopping-cart 1.png" alt="" height="25px"
-                                    width="25px" class="me-2">BUY NOW</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-                        <div class="bg-light rounded">
-                            <img src="Image/SeekPng 1.png" class="card-img-top" alt="...">
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur.</p>
-                        </div>
-
-                        <div class="card-body d-flex justify-content-between">
-                            <h2 class="card-link">$200</h2>
+                            <h2 class="card-link txt-highlight">$200</h2>
                             <button class="btn btn-coustom"><img src="logo/shopping-cart 1.png" alt="" height="25px"
                                     width="25px" class="me-2">BUY NOW</button>
                         </div>
@@ -121,22 +121,25 @@
                 </div>
             </div>
         </section>
+
         <!-- second section start -->
+
+
         <section class="container mt-5">
-            <h1>MEN JACKET</h1>
+            <h1 class="txt-highlight-3">MEN JACKET</h1>
             <div class="row mt-5">
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
                         <div class="bg-light rounded">
-                            <img src="Image/SeekPng 1.png" class="card-img-top" alt="...">
+                            <img src="image/pic4.png" class="card-img-top" alt="..." height="285">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title fw-bold">Snowboard Jacket </h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur.</p>
                         </div>
 
                         <div class="card-body d-flex justify-content-between">
-                            <h2 class="card-link">$200</h2>
+                            <h2 class="card-link txt-highlight">$200</h2>
                             <button class="btn btn-coustom"><img src="logo/shopping-cart 1.png" alt="" height="25px"
                                     width="25px" class="me-2">BUY NOW</button>
                         </div>
@@ -145,15 +148,15 @@
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
                         <div class="bg-light rounded">
-                            <img src="Image/SeekPng 1.png" class="card-img-top" alt="...">
+                            <img src="image/pic5.png" class="card-img-top" alt="..." height="285">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title fw-bold">Man Leather Jackets</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur.</p>
                         </div>
 
                         <div class="card-body d-flex justify-content-between">
-                            <h2 class="card-link">$200</h2>
+                            <h2 class="card-link txt-highlight">$200</h2>
                             <button class="btn btn-coustom"><img src="logo/shopping-cart 1.png" alt="" height="25px"
                                     width="25px" class="me-2">BUY NOW</button>
                         </div>
@@ -162,15 +165,15 @@
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
                         <div class="bg-light rounded">
-                            <img src="Image/SeekPng 1.png" class="card-img-top" alt="...">
+                            <img src="image/pic6.png" class="card-img-top" alt="..." height="285">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title fw-bold">Man Casual Jackets</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur.</p>
                         </div>
 
                         <div class="card-body d-flex justify-content-between">
-                            <h2 class="card-link">$200</h2>
+                            <h2 class="card-link txt-highlight">$200</h2>
                             <button class="btn btn-coustom"><img src="logo/shopping-cart 1.png" alt="" height="25px"
                                     width="25px" class="me-2">BUY NOW</button>
                         </div>
@@ -178,7 +181,10 @@
                 </div>
             </div>
         </section>
+
         <!-- third start -->
+
+
         <section class="container mt-5">
             <div class="row d-flex d-sm-flex flex-md-row flex-column-reverse  g-5">
                 <div class="col">
@@ -191,7 +197,7 @@
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
+                                            <h5 class="card-title fw-bold">Find the Perfect Fit</h5>
                                             <p class="card-text">Lorem ipsum dolor sit amet .</p>
 
                                         </div>
@@ -207,7 +213,7 @@
                                     </div>
                                     <div class="col-md-8 ">
                                         <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
+                                            <h5 class="card-title fw-bold">Free Exchanges</h5>
                                             <p class="card-text">Lorem ipsum dolor sit amet</p>
 
                                         </div>
@@ -223,7 +229,7 @@
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
+                                            <h5 class="card-title fw-bold">Contact Our Seller</h5>
                                             <p class="card-text">Lorem ipsum dolor sit.dolor sit.</p>
 
                                         </div>
@@ -233,11 +239,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col mt-5 pt-4">
+                <div class="col mt-5 pt-5">
                     <img src="logo/XMLID 1.png" alt="" width="100%">
                 </div>
             </div>
         </section>
+
+        <!-- additional-start -->
 
     </main>
 
