--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             width="25px" class="me-2">BUY NOW</button>
                 </div>
                 <div class="col-12 col-md-5 ">
-                    <img src="image/green.png" alt="" , width="100%">
+                    <img src="images/green.png" alt="" , width="100%">
                 </div>
             </div>
         </section>
@@ -71,7 +71,7 @@
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-white .b-radious" style="width: 18rem;">
                         <div class="bg-light rounded">
-                            <img src="image/pic1.png" class="card-img-top" alt="...">
+                            <img src="images/pic1.png" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title fw-bold">Yellow Coat Jacket</h5>
@@ -88,7 +88,7 @@
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
                         <div class="bg-light rounded">
-                            <img src="Image/pic2.png" class="card-img-top" alt="..." height="285px" width="40">
+                            <img src="images/pic2.png" class="card-img-top" alt="..." height="285px" width="40">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title fw-bold">Ladies Jacket </h5>
@@ -105,7 +105,7 @@
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
                         <div class="bg-light rounded">
-                            <img src="Image/pic3.png" class="card-img-top" alt="..." height="285" width="60">
+                            <img src="images/pic3.png" class="card-img-top" alt="..." height="285" width="60">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title fw-bold">Woman Leather Jacket </h5>
@@ -131,7 +131,7 @@
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
                         <div class="bg-light rounded">
-                            <img src="image/pic4.png" class="card-img-top" alt="..." height="285">
+                            <img src="images/pic4.png" class="card-img-top" alt="..." height="285">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title fw-bold">Snowboard Jacket </h5>
@@ -148,7 +148,7 @@
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
                         <div class="bg-light rounded">
-                            <img src="image/pic5.png" class="card-img-top" alt="..." height="285">
+                            <img src="images/pic5.png" class="card-img-top" alt="..." height="285">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title fw-bold">Man Leather Jackets</h5>
@@ -165,7 +165,7 @@
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
                         <div class="bg-light rounded">
-                            <img src="image/pic6.png" class="card-img-top" alt="..." height="285">
+                            <img src="images/pic6.png" class="card-img-top" alt="..." height="285">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title fw-bold">Man Casual Jackets</h5>
