--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Penguin Fashion</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <!-- navbar start -->
-    <section class="container">
+    <section class="container " style="background-color: #FFFBF0">
         <nav class="navbar navbar-expand-lg  navbar-light  fw-bold " style="background-color: #FFFBF0;">
             <div class="container-fluid m-2">
                 <a class="navbar-brand " href="#">
@@ -51,8 +53,8 @@
 
     <main>
         <section class="container" style="background-color: #FFFBF0;">
-            <div class="row flex-lg-row flex-column ">
-                <div class="col-md-5 col-12 mt-5">
+            <div class="row flex-md-row flex-column ">
+                <div class="col-md-5 col-lg-6 col-12 mt-5">
                     <h1 class="txt-highlight  fs-1 fw-bold">BE THE PENGUINS</h1>
                     <h1 class=" txt-highlight-3 fw-bold">OF WINTER</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab nostrum quibusdam accusantium?</p>
@@ -81,7 +83,7 @@
                         <div class="card-body d-flex justify-content-between">
                             <h2 class="card-link txt-highlight">$200</h2>
                             <button class="btn btn-coustom "><img src="logo/shopping-cart 1.png" alt="" height="25px"
-                                    width="25px" class="me-2">BUY NOW</button>
+                                    width="25px" class="me-2 fw-bold">BUY NOW</button>
                         </div>
                     </div>
                 </div>
@@ -148,7 +150,7 @@
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
                         <div class="bg-light rounded">
-                            <img src="images/pic5.png" class="card-img-top" alt="..." height="285">
+                            <img src="images/pic5.png" class="card-img-top" alt="..." height="285px">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title fw-bold">Man Leather Jackets</h5>
@@ -190,7 +192,8 @@
                 <div class="col">
                     <div class="row d-flex flex-column ">
                         <div class="col">
-                            <div class="card shadow p-3 mb-5 bg-white b-radious mb-3 border-0" style="max-width: 500px; ">
+                            <div class="card shadow p-3 mb-5 bg-white b-radious mb-3 border-0"
+                                style="max-width: 500px; ">
                                 <div class="row g-0">
                                     <div class="col-md-4 d-flex justify-content-center">
                                         <img src="logo/image 12.png" alt="..." width="100">
@@ -206,7 +209,8 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card shadow p-3 mb-5 bg-white b-radious mb-3 border-0" style="max-width: 500px;">
+                            <div class="card shadow p-3 mb-5 bg-white b-radious mb-3 border-0"
+                                style="max-width: 500px;">
                                 <div class="row g-0">
                                     <div class="col-md-4 d-flex justify-content-center">
                                         <img src="logo/image 13.png" alt="..." width="100">
@@ -222,7 +226,8 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card shadow p-3 mb-5 bg-white b-radious mb-3 border-0 " style="max-width: 500px; ">
+                            <div class="card shadow p-3 mb-5 bg-white b-radious mb-3 border-0 "
+                                style="max-width: 500px; ">
                                 <div class="row  g-0">
                                     <div class="col-md-4 d-flex justify-content-center">
                                         <img src="logo/image 14.png" alt="..." width="100">
@@ -246,6 +251,43 @@
         </section>
 
         <!-- additional-start -->
+        <footer>
+            <div class="container mt-5 " style="background-color: rgb(238, 225, 225);">
+
+                <div class="row ">
+                    <div class="col gx-3">
+                        <h6>Panguin Fashion</h6>
+                        <div class="">
+                            <img src="logo/fb.svg" alt="" width="20px">
+                            <img class="m-2" src="logo/insta (1).svg" alt="" width="20px">
+                            <img class="m-2" src="logo/twit.svg" alt="" width="20px">
+                            <img src="logo/youtube-brands.svg" alt="" width="20px">
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <h6>support</h6>
+                        <h5>FAQ</h5>
+                        <h5>Contact Us</h5>
+                        <h5>Download</h5>
+                        <h5>Locate A Dealer</h5>
+                        <h5>Product Registration</h5>
+                        <h5>Spare part</h5>                        
+                    </div>
+                    
+                    <div class="col">
+                        <h6>Panguin fashion</h6>
+                        <h5>About Panguin Fashion</h5>
+                        
+                        <h5>Panguin Fashion Access</h5>
+                        <h5>contact@Panguin Fashion.com</h5>
+                        <h5>Product Registration</h5>
+
+                    </div>
+                    <div class="col">col</div>
+                  </div>
+            </div>
+        </footer>
 
     </main>
 
